user認証をemailからユーザ名に変更

--- a/c_team/config/locales/ja.yml
+++ b/c_team/config/locales/ja.yml
@@ -4,7 +4,7 @@ ja:
       user: '会員'
     attributes:
       user:
-        email: 'メールアドレス'
+        name: 'ユーザ名'
         administrator: '管理者'
         password: 'パスワード'
         password_confirmation: 'パスワードの確認'
